# ea-code

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  codex-sqlite-2-jsonl-orcflow-update.md  index.html  opus-sqlite-2-jsonl-orcflow-update.md  package-lock.json  package.json  start.sh
frontend/desktop/src-tauri/: Cargo.toml  TESTING.md  build.rs  tauri.conf.json
frontend/desktop/src-tauri/.cargo/: config.toml
frontend/desktop/src-tauri/.cargo/tooling/: clang-cxx.cmd  clang-cxx.sh  clang.cmd  clang.sh  resolve-clang.cmd
frontend/desktop/src-tauri/capabilities/: default.json
frontend/desktop/src-tauri/icons/: icon.icns
frontend/desktop/src-tauri/migrations/2026-03-09-000001_create_initial_schema/: down.sql  up.sql
frontend/desktop/src-tauri/migrations/2026-03-10-000001_add_current_stage_to_runs/: down.sql  up.sql
frontend/desktop/src-tauri/migrations/2026-03-10-000002_add_current_stage_started_at/: down.sql  up.sql
frontend/desktop/src-tauri/src/: bootstrap.rs  events.rs  git.rs  http.rs  lib.rs  platform.rs  schema.rs
frontend/desktop/src-tauri/src/agents/: api_client.rs  base.rs  claude.rs  codex.rs  gemini.rs  kimi.rs  mcp.rs  mod.rs  opencode.rs
frontend/desktop/src-tauri/src/agents/base/: mod.rs  windows.rs
frontend/desktop/src-tauri/src/commands/: api_health.rs  app.rs  app_settings.rs  cli.rs  cli_http.rs  cli_util.rs  cli_version.rs  emitter.rs  git_bash.rs  history.rs  mcp.rs  mod.rs  notifications.rs  pipeline.rs  power.rs  settings.rs  skills.rs  workspace.rs
frontend/desktop/src-tauri/src/commands/cli/: availability.rs  git_bash.rs  health.rs  http.rs  (+3 more)
frontend/desktop/src-tauri/src/conversations/: chat.rs  commands.rs  events.rs  hive_request.rs  mod.rs  persistence.rs  pipeline.rs  pipeline_debug.rs  reattach.rs  score_client.rs  sse.rs  symphony_request.rs
frontend/desktop/src-tauri/src/db/: artifacts.rs  cleanup.rs  mcp.rs  mod.rs  questions.rs  run_detail.rs  run_status.rs  runs.rs  sessions.rs  settings.rs
frontend/desktop/src-tauri/src/models/: agents.rs  api.rs  conversation.rs  environment.rs  events.rs  mcp_runtime.rs  mod.rs  pipeline.rs  questions.rs  settings.rs  skills.rs  storage.rs
frontend/desktop/src-tauri/src/orchestrator/: context_summary.rs  helpers.rs  iteration.rs  iteration_planning.rs  iteration_review.rs  mod.rs  parallel_stage.rs  parsing.rs  pipeline.rs  plan_gate.rs  run_setup.rs  session_memory.rs  skill_selection.rs  skill_stage.rs  stages.rs  user_questions.rs
frontend/desktop/src-tauri/src/sidecar/: cleanup.rs  discovery.rs  health.rs  log_buffer.rs  mod.rs  process.rs  python.rs  setup.rs  windows_job.rs
frontend/desktop/src-tauri/src/storage/: cleanup.rs  index.rs  mcp.rs  messages.rs  migration.rs  mod.rs  projects.rs  recovery.rs  sessions.rs  settings.rs  skills.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/2026-03-08-000001_create_initial_tables/: down.sql  up.sql
src-tauri/migrations/2026-03-08-000002_add_prompt_enhancer_agent/: down.sql  up.sql
src-tauri/migrations/2026-03-08-000003_add_model_settings/: down.sql  up.sql
src-tauri/migrations/2026-03-08-000004_add_planning_agents/: down.sql  up.sql
src-tauri/migrations/2026-03-08-000005_add_stage_models/: down.sql  up.sql
src-tauri/migrations/2026-03-08-000006_add_pipeline_context_and_summary/: down.sql  up.sql
src-tauri/migrations/2026-03-08-000007_add_kimi_opencode/: down.sql  up.sql
src-tauri/migrations/2026-03-08-000008_add_phase2_settings/: up.sql
src-tauri/migrations/2026-03-08-000009_add_skills_system/: down.sql  up.sql
src-tauri/migrations/2026-03-08-000010_add_project_settings_and_copilot/: down.sql  up.sql
src-tauri/migrations/2026-03-08-000011_add_agent_max_turns_and_mode/: down.sql  up.sql
src-tauri/migrations/2026-03-08-000012_add_mcp_and_update_policy_settings/: down.sql  up.sql
src-tauri/migrations/2026-03-08-000013_fix_swapped_copilot_opencode_paths/: down.sql  up.sql
src-tauri/migrations/2026-03-08-000014_remove_unused_settings/: down.sql  up.sql
src-tauri/migrations/2026-03-09-000001_create_initial_schema/: down.sql  up.sql
src-tauri/migrations/2026-03-09-000002_drop_project_settings_table/: down.sql
src-tauri/src/: commands.rs  events.rs  lib.rs  main.rs  models.rs  orchestrator.rs  schema.rs  settings.rs
src-tauri/src/agents/: base.rs  claude.rs  codex.rs  copilot.rs  gemini.rs  kimi.rs  mod.rs  opencode.rs
src-tauri/src/commands/: cli.rs  history.rs  mcp.rs  mod.rs  pipeline.rs  settings.rs  skills.rs  workspace.rs
src-tauri/src/db/: artifacts.rs  logs.rs  mcp.rs  mod.rs  models.rs  project_settings.rs  projects.rs  questions.rs  runs.rs  sessions.rs  settings.rs  skills.rs
src-tauri/src/db/models/: details.rs  mod.rs  project_settings.rs  records.rs  settings.rs
src-tauri/src/models/: agents.rs  environment.rs  mcp.rs  mod.rs  pipeline.rs  questions.rs  settings.rs
src-tauri/src/orchestrator/: helpers.rs  iteration.rs  iteration_review.rs  mod.rs  parsing.rs  pipeline.rs  plan_gate.rs  run_setup.rs  skill_selection.rs  skill_stage.rs  stages.rs  user_questions.rs
src-tauri/src/orchestrator/prompts/: execution.rs  judge.rs  mod.rs
(+399 files in other folders)
