[package]
name = "ea-code"
version = "0.1.0"
description = "Multi-CLI AI Orchestrator — orchestrates Claude, Codex, and Gemini CLIs"
authors = ["eatbas"]
edition = "2021"

[lib]
name = "ea_code_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }

