[package]
name = "ea-code"
version = "0.1.0"
description = "Multi-CLI AI Orchestrator — orchestrates Claude, Codex, and Gemini CLIs"
authors = ["eatbas"]
edition = "2021"
default-run = "ea-code"

[lib]
name = "ea_code_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
diesel = { version = "2.2", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.2"
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "ea-code-mcp"
path = "src/bin/mcp_server.rs"
