[package]
name = "maestro"
version = "0.6.3"
description = "Multi-CLI AI Orchestrator — orchestrates Claude, Codex, and Gemini CLIs"
authors = ["eatbas"]
edition = "2021"
default-run = "maestro"

[lib]
name = "maestro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.10", features = [] }
tauri-plugin-opener = "2.5"
tauri-plugin-dialog = "2.6"
tauri-plugin-shell = "2.3"
tauri-plugin-updater = "2.10"
tauri-plugin-process = "2.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50", features = ["full"] }
dirs = "6"
uuid = { version = "1.23", features = ["v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
reqwest = { version = "0.13", features = ["json", "rustls", "stream"], default-features = false }
lazy_static = "1.5"
futures = "0.3.32"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
